--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -127,8 +127,9 @@ header {
         width: 60%;
         height: 45%;
         left: calc(50% - 30%);
-        bottom: 5%;
-        margin-top: 2rem;
+        top: 35%;
+        bottom: auto;
+        margin-top: 0;
     }
 
     .header_container span {
