--- a/src/index.css
+++ b/src/index.css
@@ -123,8 +123,17 @@ img {
   .container{
     width: var(--container-width-sm);
   }
-  
+
   section {
-    margin-top:2rem;
+    margin-top: 2rem;
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
+
+  .section_title {
+    font-size: 2rem;
   }
 }
